refactoring
git-svn-id: https://svn.kuali.org/repos/student/contrib/ksa/trunk@38575 0ac02d80-fb3f-11dc-a574-c57244a850eb